--- a/frontend/quizmaster-frontend/src/styles.css
+++ b/frontend/quizmaster-frontend/src/styles.css
@@ -1,1 +1,17 @@
-/* You can add global styles to this file, and also import other style files */
+@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+mat-card {
+  margin: 20px;
+}
+
+mat-card-content {
+  margin-bottom: 20px;
+}
+
+button {
+  margin: 20px;
+}
